tests/rosetta/transpiler/Zig/averages-mode.error
zig build: exit status 1
/tmp/averages-mode.zig:34:28: error: local variable is never mutated
/tmp/averages-mode.zig:34:28: note: consider using 'const'
/tmp/averages-mode.zig:63:28: error: local variable is never mutated
/tmp/averages-mode.zig:63:28: note: consider using 'const'
